16_subseq/grade.txt
Grading at Wed Aug 19 19:49:26 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:13:8: error: ‘pArray’ undeclared (first use in this function)
     if(pArray[i] > pArray[i - 1]) {
        ^
maxSeq.c:13:8: note: each undeclared identifier is reported only once for each function it appears in
maxSeq.c:18:2: error: ‘lenght’ undeclared (first use in this function)
  lenght = 1;
  ^
The code did not compile!

Overall Grade: F
